--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,7 +21,7 @@ body {
         }
     }
 
-    &._blur .wrapper {
+    &._blur .main, &._blur .header {
         filter: blur(5px);
     }
 
@@ -148,6 +148,10 @@ body {
     
     padding: 15.5px 20px;
     min-width: 214px;
+    &._min {
+        min-width: 180px;
+    }
+    
 
     background: #212121;
     border: 2px solid #212121;
@@ -168,7 +172,14 @@ body {
     }
 
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 1rem;
+    @include _768 {
+        font-size: 1.125rem;
+    }
+    
+    @include _992 {
+        font-size: 1.25rem;
+    }
     line-height: 175%;
     text-align: center;
 
