--- a/app/scss/pages/main-page/_database.scss
+++ b/app/scss/pages/main-page/_database.scss
@@ -1,5 +1,8 @@
 .database {
 
+    position: relative;
+    z-index: 100;
+    
     // .database__container
 
     &__container {
@@ -38,13 +41,23 @@
         }
 
         display: flex;
+        flex-direction: column;
+        @media (min-width: 600px) {
+            flex-direction: row;
+        }
 
+        &--body {
+            position: relative;
+            flex: 1 1 auto;
+        }
     }
 
     // .database__label
 
     &__label {
         flex: 1 1 auto;
+        position: relative;
+        z-index: 11;
     }
 
     // .database__input
@@ -111,5 +124,33 @@
             background: var(--dark);
         }
 
+    }
+
+    &__search-list {
+        position: absolute;
+        left: 0; top: 100%;
+        transform: translate(0,-5px);
+        width: 100%;
+        z-index: 10;
+
+        background: #F0F0F0;
+        border: 1px solid #C9C9C9;
+        border-radius: 0 0 8px 8px;
+
+        padding: 15px 0 10px;
+
+        & li {
+            padding: 10px 24px;
+            cursor: pointer;
+
+            transition: background .2s ease-in-out;
+            &:hover {
+                background: #e6e6e6;
+            }
+            
+            &:active {
+                background: #d6d6d6;
+            }
+        }
     }
 }
